--- a/index.html
+++ b/index.html
@@ -73,6 +73,18 @@
             border: 1px solid var(--border-color); border-radius: 8px; transition: all 0.2s ease; 
         }
 
+        .board-controls select {
+            background: var(--bg-medium);
+            border: 2px solid var(--border-color);
+        }
+
+        .board-controls select option {
+            background: var(--bg-medium);
+            color: var(--text-color);
+            padding: 8px 12px;
+            border: none;
+        }
+
         .board-controls input:focus, .board-controls select:focus { 
             outline: none; border-color: var(--accent-main); 
             box-shadow: 0 0 0 2px rgba(92, 149, 214, 0.2); 
@@ -97,6 +109,8 @@
             border: 1px solid var(--border-color); border-radius: 12px; padding: 0; 
             display: flex; flex-direction: column; gap: 0; 
             box-shadow: 0 4px 16px rgba(0, 0, 0, 0.05); 
+            height: fit-content;
+            max-height: calc(85vh - 200px);
         }
 
         .column h3 { 
@@ -113,7 +127,9 @@
 
         .column-content { 
             padding: 15px; display: flex; flex-direction: column; gap: 15px; 
-            flex-grow: 1; overflow-y: auto; 
+            flex-grow: 1; overflow-y: auto; overflow-x: hidden;
+            max-height: calc(85vh - 280px);
+            min-height: 200px;
         }
 
         .project-card { 
@@ -122,6 +138,8 @@
             padding: 16px 18px; display: flex; flex-direction: column; gap: 12px; 
             transition: all 0.3s ease; cursor: pointer; position: relative; overflow: hidden;
             backdrop-filter: blur(10px);
+            flex-shrink: 0;
+            min-height: fit-content;
         }
 
         .project-card::before { 
@@ -296,13 +314,31 @@
         .empty-column { 
             display: flex; align-items: center; justify-content: center; 
             color: var(--text-muted); font-style: italic; padding: 40px 20px; opacity: 0.6; 
+            min-height: 100px;
+            flex-shrink: 0;
         }
 
         /* Custom Scrollbars */
-        .column-content::-webkit-scrollbar, #company-list::-webkit-scrollbar { width: 8px; }
-        .column-content::-webkit-scrollbar-track, #company-list::-webkit-scrollbar-track { background: transparent; }
+        .column-content::-webkit-scrollbar, #company-list::-webkit-scrollbar { 
+            width: 8px; 
+        }
+        .column-content::-webkit-scrollbar-track, #company-list::-webkit-scrollbar-track { 
+            background: rgba(255, 255, 255, 0.05); 
+            border-radius: 4px;
+        }
         .column-content::-webkit-scrollbar-thumb, #company-list::-webkit-scrollbar-thumb { 
-            background-color: var(--scrollbar-thumb); border-radius: 4px; 
+            background-color: var(--scrollbar-thumb); 
+            border-radius: 4px; 
+            transition: background-color 0.2s ease;
+        }
+        .column-content::-webkit-scrollbar-thumb:hover, #company-list::-webkit-scrollbar-thumb:hover { 
+            background-color: var(--accent-main); 
+        }
+
+        /* Firefox scrollbar */
+        .column-content, #company-list {
+            scrollbar-width: thin;
+            scrollbar-color: var(--scrollbar-thumb) rgba(255, 255, 255, 0.05);
         }
 
         /* Quick Actions */
@@ -354,13 +390,17 @@
             body { overflow-y: auto; } 
             .main-layout-container { flex-direction: column; align-items: center; padding: 20px; } 
             .project-board-container, .side-panels { width: 95%; max-height: none; } 
+            .project-board-container { max-height: 90vh; }
             .side-panels { flex-direction: row; } 
             .quick-actions { bottom: 20px; right: 20px; }
+            .column { max-height: calc(90vh - 250px); }
+            .column-content { max-height: calc(90vh - 330px); }
         }
 
         @media (max-width: 768px) { 
             .board-columns { flex-direction: column; overflow-x: hidden; } 
-            .column { max-width: 100%; } 
+            .column { max-width: 100%; max-height: 60vh; } 
+            .column-content { max-height: calc(60vh - 80px); }
             .quick-actions { 
                 flex-direction: row; 
                 bottom: 20px; 
